sure hope this fails

--- a/.github/workflows/tstinst.yml
+++ b/.github/workflows/tstinst.yml
@@ -25,9 +25,10 @@ jobs:
       - name: install to old conda/constructor and then back to latest
         shell: bash -l {0}
         run: |
-          conda create -n construct constructor=3.3 python=3.10 -y
+          #conda create -n construct constructor=3.3 python=3.10 -y
+          conda create -n construct constructor=3.7 python=3.10 -y
           conda activate construct
-          conda install constructor=3.7 -y
+          #conda install constructor=3.7 -y
           
       - name: Get GSAS-II sources
         shell: bash -l {0}
